@@ -9,6 +9,8 @@ Changes log
           some context path. Reported by Bruno Dumon.
         - Fixed bug regarding the deeplyAccessible property for a 
           directory. Reported by Carlos Alexandre Moscoso.
+        - Fixed GWT javascript recursion with the Engine#getInstance 
+          method. Reported by Doug Alcouffe.
 
 - 1.1 Release candidate 1 (08/20/2008)
     - Breaking change
